assets/css/style.css
/* ----------------------------------------Code Institute Milestone-1 - Evert Rot */

@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:100,200,300,400,500,600,700,800,900&display=swap');
@import url('https://fonts.googleapis.com/css?family=Allerta+Stencil&display=swap');
html {
    scroll-behavior: smooth;
}

body {
    max-width: 100vw;
    -ms-scroll-snap-type: none;
    scroll-snap-type: none;
    scroll-behavior: smooth;
    background-image: url("../images/front-transpa.png");
    background-repeat: no-repeat;
    background-position: center;
    background-attachment: fixed;
    background-origin: content-box;
    background-size: contain;
    font-family: 'Source Code Pro', monospace;
    font-size: 1.2em;
    color: rgba(60, 60, 60);
}

.container-fluid {
    padding-left: 0px;
    padding-right: 0px;
    max-width: 1920px;
}

.row {
    margin: 0;
}

p {
    text-align: justify;
    font-weight: 600;
}

a {
    text-decoration: none;
    transition: all .200s ease-in-out;
    -webkit-transition: all .200s ease-in-out;
    -moz-transition: all .200s ease-in-out;
    -ms-transition: all .200s ease-in-out;
    -o-transition: all .200s ease-in-out;
}

a:hover {
    color: rgba(255, 255, 255);
    text-decoration: none;
}

a:active {
    color: rgba(255, 255, 255, 0.3);
}

h1, h3 {
    font-family: 'Source Code Pro', monospace;
    text-align: center;
    font-size: 20px;
    margin: 25px;
}

h4 {
    font-family: 'Source Code Pro', monospace;
    text-align: left;
    font-weight: 400;
    font-size: 2em;
    margin-bottom: 25px;
    margin-left: 25px;
}

h5 {
    color: rgba(255, 255, 255,0.9);
    text-align: center;
    padding-bottom: 0.5em;
}

iframe {
    width: 100%;
}

/* ----------------------------------------Navbar/header */

.er-title {
    margin: auto;
}

.navbar {
    padding: 0px 0px;
}

nav {
    min-height: 4em;
    background-color: rgba(60, 60, 60);
    color: white;
}

.er-brand a {
    font-size: 1.2em;
    margin-left: 25px;
    color: rgba(255, 255, 255, 0.8);
}

.er-brand a:hover {
    color: rgba(255, 255, 255, 0.99);
}

.er-brand a:active {
    color: rgba(255, 255, 255, 0.3);
}

.er-nav-icons {
    margin: auto;
    margin-left: auto;
    margin-right: auto;
}

.er-menu-icon {
    font-size: 1.6em;
    text-align: center;
    letter-spacing: 0.50em;
}

.er-menu-icon a {
    color: rgba(255, 255, 255, 0.8);
    text-shadow: 0px 0px 7px rgba(178, 43, 43, 0.2);
}

.er-menu-icon-arrow a {
    color: rgba(255, 255, 255, 0.4);
}

.er-menu-icon a:hover {
    color: rgba(255, 255, 255)!important;
    font-size: 110%;
    text-shadow: 0px 0px 7px rgba(178, 43, 43, 0.1);
}

.er-menu-icon a:active {
    color: rgba(255, 255, 255, 0.2)!important;
    text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.5);
}

.er-nav-boembep {
    position: absolute;
    left: 50vw;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
    letter-spacing: 8px;
    font-weight: 300;
    color: rgba(255, 255, 255);
}

.er-nav-boembep h2 {
    text-shadow: 0px 0px 7px rgba(178, 43, 43, 0.9);
}

/* ----------------------------------------Section-colors */

#frontpage {
    position: relative;
    top: -4em;
    scroll-snap-align: none;
    min-height: 100vh;
    background-image: url("../images/front-transpa.png");
    background-repeat: no-repeat;
    background-position: center;
    background-attachment: scroll;
    background-origin: content-box;
    background-size: contain;
}

#about {
    background-color: rgba(207, 190, 160, 0.92);
}

#stream {
    background-color: rgba(207, 190, 160, 0.92);
}

#download {
    background-color: rgba(207, 190, 160, 0.92);
}

#art {
    background-color: rgba(207, 190, 160, 0.92);
}

#video {
    background-color: rgba(207, 190, 160, 0.92);
}

/* ----------------------------------------Section template with scroll snapping to top */

.er-content {
    scroll-snap-align: start;
    width: 100%;
    margin: 0;
}

.er-content img {
    width: 100%;
}

/* ----------------------------------------Section content */

.er-content-wrapper {
    padding-top: 3em;
    min-height: 60vh;
    margin-top: auto;
    margin-bottom: auto;
    width: 99%;
    margin-left: auto;
    margin-right: auto;
}

/* ----------------------------------------Section Content building blocks */

.er-content-block {
    margin: 2em 0 2em 0;
    width: 100%;
}

.er-content-circle {
    width: 66%;
    height: auto;
    margin: auto;
    overflow: hidden;
    border-radius: 50%;
}

.er-content-square {
    padding: 15px;
    position: relative;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
    background-color: rgba(60, 60, 60, 0.1);
    -webkit-box-shadow: 0px 0px 25px rgba(60, 60, 60);
    box-shadow: 0px 0px 25px rgba(60, 60, 60);
}

/* ----------------------------------------Section header and footer */

.er-content-header {
    margin-top: 5em;
    margin-bottom: 2em;
    text-align: right;
    width: 100%;
    height: 2em;
    overflow: hidden;
    line-height: 2em;
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
    -webkit-box-shadow: 1px 1px 1px #ffffffa1;
    box-shadow: 1px 1px 1px #ffffffa1;
    background-color: rgba(255, 255, 255, 0.61);
}

h2 {
    margin-right: 15px;
    font-family: 'Allerta Stencil', sans-serif;
    font-weight: 100;
    font-size: 1.7em;
    letter-spacing: 0px;
    text-shadow: 1px 1px 1px #ffffffa1;
    color: rgba(207, 190, 160);
}

.er-content-footer {
    text-align: left;
    width: 100%;
    height: 2em;
    overflow: hidden;
    line-height: 2em;
    margin-top: 0em;
    margin-bottom: 2em;
    -webkit-box-shadow: 5px 5px 5px #a59172;
    box-shadow: 5px 5px 5px #a59172;
    -webkit-transform: rotate(-1deg);
    -ms-transform: rotate(-1deg);
    transform: rotate(-1deg);
    background-color: rgba(0, 0, 0, 0.7);
}
/* ... */

